--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,7 +1,7 @@
 .main-form{
-  background: rgba($first-color, 0.7);
+  background: rgba($first-color, 0.8);
   max-width: 100%;
-  padding: .5em;
+  padding: 1em 1em 2em;
   border:none;
   border-radius: 5px;
 }
@@ -32,8 +32,8 @@
   width: 100%;
 }
 [class$="textarea"]{
-  min-height:200px;
-  max-height: 400px;
+  min-height:300px;
+  max-height: 700px;
   resize: vertical;
 }
 .desc_entry-textarea{
@@ -45,17 +45,17 @@
   display: flex;
   flex-direction:row-reverse;
   justify-content:space-between;
+  //background-color: rgba($first-color, .9);
+  //position: fixed;
+  //bottom: .1em;
 }
 .publish-botton{
   $default-color:$fourth-color !default;
   background-color:$default-color;
-  &:active{
-
-  }
 }
 .content-warning{
   display: block;
-  font-size:$widget-font + 2;
+  font-size:$widget-font + 3;
   color: $third-color;
   padding: .5em;
 }
