Se agrego el sistema de comentarios Disques en l

--- a/scss/_courses-list.scss
+++ b/scss/_courses-list.scss
@@ -75,3 +75,13 @@
   display: flex;
   justify-content:center;
 }
+.disqus-comments{
+  width: 90%;
+  max-width: $max-max-width;
+  margin-left: auto;
+  margin-right: auto;
+  padding:5em 0;
+  &--guia{
+    max-width: $max-width;
+  }
+}
