--- a/scss/_definicion.scss
+++ b/scss/_definicion.scss
@@ -52,8 +52,8 @@
   color:$default-color;
 }
 %info-titulo-body{
-  padding-top: .3em;
-  padding-bottom:1em;
+  padding-top: 0;
+  padding-bottom:.2em;
   color: $first-color;
 }
 %selec-bg{
